[package]
name = "patra"
version = "0.2.0"
authors = ["zenito9970 <zenito9970@gmail.com>"]
edition = "2018"
description = """
Patra, Parallel Auto Test Runner type A.
CLI Tool for Competitive programming and Marathon Match.
"""
build = "build.rs"

[dependencies]
clap = "2.32.0"
threadpool = "1.7.1"
chrono = "0.4"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
clap = "2.32.0"
